--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "demo-deploy",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
@@ -49,9 +49,8 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
-  }
-  ,
-   "engine": {
+  },
+   "engines": {
     "node": "10.14.2",
     "npm": "6.4.1"
   }
